--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 </div>
 
-                <a href="#" class="btn" id="signup">Create Wallet</a>
+                <a href="main.html" class="btn" id="signup">Create Wallet</a>
 
         </div>
 
