user sign and display

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <input type="text"  id="userName" placeholder=" " name="user" required>
                 <label for="userName" class="userLabel">Username</label>
 
-                <input type="text"  id="passWord" placeholder=" " name="pass" required>
+                <input type="password"  id="passWord" placeholder=" " name="pass" required>
                 <label for="passWord" class="passLabel">Password</label>
 
                 <h2>Your seed phrase</h2>
@@ -47,7 +47,8 @@
 
                 </div>
 
-                <a href="main.html" class="btn" id="signup">Create Wallet</a>
+                <a href="#" class="btn" id="signup">Create Wallet</a>
+                <a href="main.html" class="btn" id="signIn">Sign In</a>
 
         </div>
 
