--- a/main.html
+++ b/main.html
@@ -170,9 +170,9 @@
         </section>
 
         <main class="main-section" id="main-section">
-        <img src="images/gorillaAvatars/greenGorilla.png" class="avatar" alt="Avatar">
+        <img src="https://gateway.pinata.cloud/ipfs/QmbT5NxcjCbYezbo3fYgDawD9y2uqyqjMmGaJ4LGvtTEGt/surpriseGorilla.png" class="avatar" alt="Avatar">
         <header>
-            <h1>Hi, Eddy</h1>
+            <h1>Hi, <span id="UserName">Eddy</span></h1>
         </header>
         <p>
             What would you like to work with?
