--- a/moralis-boilerplate.html
+++ b/moralis-boilerplate.html
@@ -35,7 +35,7 @@
     <button id="signup">Moralis Sign up</button>
     <button id="btn-login">Moralis Metamask Login</button>
     <button id="btn-logout">Logout</button>
-    <button id="get-user">Get User</button>
+    <button id="btn-signin">Moralis Sign In</button>
 
     <!-- <p id="demo"></p> -->
 
